# cima-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: query_medicamento.rs
src/: api_client.rs  downloader.rs  lib.rs  models.rs  parser.rs
src/endpoints/: cambios.rs  changes.rs  clinical_descriptions.rs  documentos.rs  documents.rs  maestras.rs  master_data.rs  materiales.rs  materials.rs  medicamentos.rs  medications.rs  mod.rs  notas.rs  presentaciones.rs  presentations.rs  safety_notes.rs  suministro.rs  supply_problems.rs  vmpp.rs
tests/: api_integration_tests.rs
