[package]
name = "cima-rs"
edition = "2024"
readme = "README.md"
rust-version = "1.91"
version = "0.0.1"

[dependencies]
tokio = { version = "1.48", features = [ "full" ] }
reqwest = { version = "0.13", features = ["json"] }
zip = "2.0"
anyhow = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "nomenclator_csv"
path = "src/bin/nomenclator_csv.rs"
