[package]
name = "cima-rs"
edition = "2024"
readme = "README.md"
rust-version = "1.91"
version = "0.0.1"

[dependencies]
tokio = { version = "1.48", features = [ "full" ] }
reqwest = { version = "0.13", features = ["json"] }
zip = "2.0"
anyhow = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
num_cpus = "1.16"
urlencoding = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
debug = 0     # Speed up compilation time and not necessary.
opt-level = 0

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
